--- a/views/pages/interactive.ejs
+++ b/views/pages/interactive.ejs
@@ -1,29 +1,49 @@
 <%- include('../partials/header'); %>
 <body style="background-color: #68d321;">
     <div id="pageHeader" class="container text-center">
-        <h1 style="margin: 1%;">Interactive Media</h1>
+        <h1 style="margin: 1%;">Software</h1>
+    </div>
+    <div class="container text-center">
+        <h2 style="margin: 1%;">Productivity</h2>
+    </div> 
+    <div class="container text-center">
+        <div class="jumbotron" style="border-radius: 0;">
+            <h3>Dynamic Scheduler</h3>
+            <p>
+                Based on preferences, given the task and event lists, and for a specified period of time (i.e. the next 2 weeks), the system will generate a schedule that leads to on-time completion of all tasks with time blocked for events, while optimizing for global preferences. Collect your tasks and events to automatically generate a schedule to meet your needs. Adjust to find your ideal blend of variety, and block off times of the day to get work done. If a task takes longer than expected, easily adjust your schedule with the click of a button. 
+            </p>
+            <p>
+                Alpha version available on <a href="https://dynamicscheduler.herokuapp.com"  target="_blank" rel="noopener noreferrer">Heroku</a>!
+            </p>
+            <div class="container justify-content-center">
+                <img width="85%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/dynamicscheduler01.png" alt="Screenshot 1">
+                <img width="85%" style="border-radius: 10px;" src="/content/interactive/screenshots/dynamicscheduler02.png" alt="Screenshot 2">
+            </div>
+            &nbsp;
+            <p>Follow development on <a href="https://github.com/dreamchef/spacegame"  target="_blank" rel="noopener noreferrer">GitHub</a>.</p>
+        </div>
+    </div>
+    <div class="container text-center">
+        <h2 style="margin: 1%;">Interactive Media</h2>
     </div>
     <div class="container text-center">
         <div class="jumbotron" style="border-radius: 0;">
             <h3>Space Game (2021)</h3>
-            
             <p>
                 First-person shooter, real-time strategy hybrid set in a three-dimensional battlefield; currently being developed
                 in Unreal Engine 4.  Immerse yourself in the role of fleet commander as you watch the battle and enact your strategy from your capital ship.
                 Once you have weakened the enemy fleet, close in to destroy your rival's command ship and secure a victory.
             </p>
             <p>
-                Follow development on <a href="https://github.com/dreamchef/spacegame">GitHub</a>!
+                Follow development on <a href="https://github.com/dreamchef/spacegame"  target="_blank" rel="noopener noreferrer">GitHub</a>!
             </p>
             <div class="row">
                 <div class="col">
-                    <img width="100%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame02.png" alt="Screenshot 1">
+                    <img style='width: 100%; border-radius: 10px;' src="/content/interactive/screenshots/spacegame02.png" alt="Screenshot 1">
                 </div>
-                
-                <div class="col" style="height: 47vh;">
-                    <img width="100%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/spacegame01.png" alt="Screenshot 1">
+                <div class="col">
+                    <img style='width: 100%; border-radius: 10px;' src="/content/interactive/screenshots/spacegame01.png" alt="Screenshot 1">
                 </div>
-                
             </div>
             <div class="row">
                 <div class="col">
@@ -52,7 +72,7 @@
                 and use your flashlight sparingly, as this will allow the hunter to detect you.  If they do, you will have on last chance to hide; 
                 but if you fail, the house will become your permanent home.  A text-based, horror-themed roguelike written in Python.
             </p>
-                Clone from <a href="https://github.com/dreamchef/escapegame">GitHub</a>!
+                Clone from <a href="https://github.com/dreamchef/escapegame"  target="_blank" rel="noopener noreferrer">GitHub</a>!
                 <div class="container justify-content-center">
                     <img width="85%" style="margin: 2% 0; border-radius: 10px;" src="/content/interactive/screenshots/escapegame01.png" alt="Screenshot 1">
                     <img width="85%" style="border-radius: 10px;" src="/content/interactive/screenshots/escapegame02.png" alt="Screenshot 2">
